2003-06-11  Brian Gough  <bjg@network-theory.co.uk>

	* coupling.c (gsl_sf_coupling_6j_INCORRECT_e): fixed typo in test
	for two_jf < 0

2003-06-05  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.c (test_coupling): added some regression tests for
	coupling functions

2003-06-02  Brian Gough  <bjg@network-theory.co.uk>

	* gamma_inc.c (gamma_inc_D): handle x<a, a>10 as a special case

2003-04-18  Brian Gough  <bjg@network-theory.co.uk>

	* gamma.c (gsl_sf_gammainv_e): handle any singularities in
	gamma(x) up front and return zero directly

2003-04-12  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c: changed value of psi(1,1) in table psi_1_table to be
	positive ((-)^2 * 1! * zeta(2)), in accordance with Abramowitz &
	Stegun 6.4.2.

2003-04-08  G. Jungman

    * erfc.c, gsl_sf_erf.h: added gsl_sf_hazard_e() and
    gsl_sf_hazard() functions

2003-04-07  G. Jungman

    * gamma_inc.c, gsl_sf_gamma.h: added gsl_sf_gamma_inc_e() and
    gsl_sf_gamma_inc(), implmentations of the non-normalized incomplete
    gamma function

2003-03-09  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_sf_legendre.h: added missing const to formal parameter on
	gsl_sf_legendre_sphPlm_deriv_array

2003-01-25  Brian Gough  <brian.gough@network-theory.co.uk>

	* test_gamma.c (test_gamma): added a test for
	gamma_inc_P(10,1e-16) (BUG#12)

Sat Sep  7 15:56:15 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.h (TEST_FACTOR): include an overall factor in the test
 	tolerances, otherwise there are too many bug reports for minor
 	failures.

Sun Sep  1 17:34:27 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): increased tolerance on test

Sat Jul 13 23:11:37 2002  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_Kcomp_e): improved error estimate to
 	take cancellation of y=1-k^2 into account near k=1 

Sun Jul  7 21:39:12 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_bessel.c (test_bessel): increased tolerance on test of